# ChangeLog for dev-db/couchdb
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/couchdb/ChangeLog,v 1.78 2013/06/28 14:06:16 djc Exp $

*couchdb-1.3.1 (28 Jun 2013)

  28 Jun 2013; Dirkjan Ochtman <djc@gentoo.org> +couchdb-1.3.1.ebuild:
  Version bump couchdb to 1.3.1.

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.0-r1.ebuild:
  Stable for amd64, wrt bug #473562

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.0-r1.ebuild:
  Stable for x86, wrt bug #473562

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> couchdb-1.3.0-r1.ebuild:
  Stable for ppc, wrt bug #473562

  28 May 2013; Dirkjan Ochtman <djc@gentoo.org> couchdb-1.2.1.ebuild,
  couchdb-1.3.0-r1.ebuild, couchdb-1.3.0.ebuild:
  Restrict dependency on spidermonkey to < 1.8.7 (bug 471454).

*couchdb-1.3.0-r1 (16 May 2013)

  16 May 2013; Patrick Lauer <patrick@gentoo.org> +couchdb-1.3.0-r1.ebuild:
  Fix logic to allow initial install, not only upgrades #469262

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> couchdb-1.2.1.ebuild,
  couchdb-1.3.0.ebuild, files/couchdb.conf-0.10, files/couchdb.init-3,
  metadata.xml:
  Restrict couchdb-1.3.0 to <erlang-16.

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> couchdb-1.2.1.ebuild,
  couchdb-1.3.0.ebuild, files/couchdb.conf-0.10, files/couchdb.init-3,
  metadata.xml:
  Upgrade couchdb-1.3.0 to EAPI=5.

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> -couchdb-1.1.1.ebuild,
  -couchdb-1.2.0.ebuild, couchdb-1.2.1.ebuild, files/couchdb.conf-0.10,
  files/couchdb.init-0.10, files/couchdb.init-2, files/couchdb.init-3,
  metadata.xml:
  Remove old versions of couchdb.

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> couchdb-1.3.0.ebuild:
  Drop -Werror from couchjs build (bug 452530).

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> couchdb-1.3.0.ebuild:
  Stop creating /var/run/couchdb (bug 454994).

*couchdb-1.3.0 (03 May 2013)
