@@ -7,19 +7,16 @@ AUX couchdb.init-0.10 1176 SHA256 8e3dcdd68702927da09aec2f730ee7ce98a442095279cc
 AUX couchdb.init-2 1150 SHA256 256731f0a077be54a7f89072673742bb3b7b56539e9e31c5efb91d076540f7bd SHA512 236f1e171776420797fbb74a1b8c8d8865de2638ddb901017d4ebc362d4c794f75a1a26bbbfc3ecf7253e7f834324403d99977a514ff9fea4a61d9c10bc92fe7 WHIRLPOOL c489daf7f94d614b13c2fed7cafc559a67a1af79cec06a117826ba58dd23f64697e8e1a6476cdeb3767421a4dcb9720ead78bac14e41f46b8336d69910c259cc
 AUX couchdb.init-3 434 SHA256 41302b877863f8b32f68bdf55b43e6968a924fa7b6d02d97d39bc6edc56ef4fb SHA512 cbc200c2374acde0b2ddfdea19b6383f5467949f75a74aec02b7661cb7bf6ec966ee42e49b317fa5dfd6610f2cf9752fafeaa9d31aabeff2805f1cc4fbefba3c WHIRLPOOL 1ee6c3905913a8cad27ad839dd8026b81fc8541b6c08e714347faadeee65bebb140ce1cda4d869efe330fb83dffab9984409f51d8a43ad540478ddf9017796d3
 AUX couchdb.init-4 438 SHA256 7f191b22d82b5e430b0c1d29a7e9e791a69a0867e96d2a643e2bf45e2f251060 SHA512 922ff66130819de9dac5d8df45b685f05287756f235a989e1b8179a4c54d8769f3e189b7797fbc03db5828b50c49f87ebd1a74cdf045027c5aed99a627753cb7 WHIRLPOOL 01528de2fa13e6eeb09465b4824cbb8c846e4fe67857b93501b15b4994c8db70eae539c7566a3c7380392f241906e60e02d0cab2a798852001cac93d5f765902
-DIST apache-couchdb-1.2.1.tar.gz 1372433 SHA256 b54e643f3ca5f046cfd2f329a001efeaae8a3094365fa6c1cb5dcf68c1b25ccd SHA512 f98ec79f67a26f9d745f4ef14f33830b0103dc41aeb00e237b69ca94691c5b2203b3cf33afe0de744cb74b127f3aff491b18e89602dd843b4a1cd111658f4f97 WHIRLPOOL f8d6492c8214861756c96d5f6841bbe77c04ad372044f7c4117e9bd1d1b3508ffc5dd2cb3c9c9bbce8d24f0df911a831d0212cb4d5df3d19b5dbbd9dbfc9a2af
 DIST apache-couchdb-1.3.0.tar.gz 3420515 SHA256 591a2a5b92941cee1bba1e16e5a4978df8a81079a8b2efa766c36540b66a37f7 SHA512 8e44fd9e585abf50e3a0ddeb76a2f4045c881b3097114d0ed2356466d6b00ea78cd6fd57c5cf3ffb17ddeccdc53d0ab060047b442f4e9f9e1daece11372dd46f WHIRLPOOL 0c42a27e045a5b7fcb0b9217bf1ec5a1ee51f6b87663220deb015fb1047e9d67bda421bf5ffeb9c548225e29cf2512607b3dc2d39661d6da106f29c8e80800df
 DIST apache-couchdb-1.3.1.tar.gz 3381522 SHA256 e3051cb0be560513e0cb2d4fcb03a4cad4eda5bf381a115375d1067875ec8a6a SHA512 55134f090e036eb81a2176376c479172793c9f35377fb171788a5ee8b2d093446c375bda861ed642f6a6d0e5cdc405b0f00453d5086f174646b21c85327e5413 WHIRLPOOL 106ae37f405802344ade5168bae42b293a003dd36b088f692657eb661671e96c8892e9689c422b6601633226b69e8a72df2b070138934244c8ea0a2ed4f57457
-EBUILD couchdb-1.2.1.ebuild 1588 SHA256 9d4a9230214bee3933a6f9209f5d56d16d3d01e440376dc4bec3580c817e0268 SHA512 47a6c395b874d8fedb2f076b1181cd9162a5c916fb780666f4e243a7c3a5d89d642a2e56e375b27134ac28480426c179919768c225345ec7f308e9c77b7b2336 WHIRLPOOL 4faaf88a06ab012df4ac9354823f8cfa8d31cd96aff4bde7fded712a36a8c5f836998ab1107f2ad69b496289e0a49589a5db209d4e7d5136f010d6b9e9bf81de
 EBUILD couchdb-1.3.0-r1.ebuild 1709 SHA256 87da5272e1a520731d9d52dc7f937404af8964377549cb2f12f44b3db47a382a SHA512 25c4a22711995f693f541f86a1f4e3754df5853b895c03b0d3e4bdc4e7df7e644510bc498c5d5c7971c11293bedd8c2009100bfd86b8a3722e7b0f489020939a WHIRLPOOL 4d18ef73d918ee346090745f3aec5df40d957350e22e5b96e343ec83cc5d47c162d83e7c5a597fdf5553709272d1c53bf4ae93030d0b3bbc49f5f75a7d9f93ef
-EBUILD couchdb-1.3.0.ebuild 1703 SHA256 450efbd9503e53e5398dc15042f2fa8101cd807662ebf2bd1303979383ffba21 SHA512 f682b1eefb93c1b01efe7572a79016e8e95219d7a27b5dcd4016b29e65a68abf12dda06a360788549dd3fcca94af57c2d53abff66a0e7c8b6da970df2327f7dd WHIRLPOOL 9e8bab5d11548d142340c897c0d638ee34b91c6012e6a31fb8cd4f8da8ac29ff6019f3a2a7535a529890d4f675e42871f1fde1c1c15cd01ae7e9ae4fbb0b9b04
 EBUILD couchdb-1.3.1.ebuild 1727 SHA256 6d5202d0022c27323f2e9ac762e667a16a3e423fcf20ba29f964e8fa05bf0034 SHA512 429eb2251acf1691e7f504a9871a1cb2b17a0bdf51d327217f55751dd29d49455c966eb0cd8fe3f684054b3ee75cb156d0c663480c1fe9050f7531c13c52fa18 WHIRLPOOL b9be4cfc09cef4225517adc5e810ef740304fd8da010895105072a0632b16a801fea151510117185f0c68b4d7ccb2eab500170ad790111c95c6f2837f471ff15
-MISC ChangeLog 10354 SHA256 1a8194380b4279dbd515bd4c2a45ae8ceff44d0046ef117a813fcf87c7231370 SHA512 4ae09c0e0fbee54a138f7eb8fe398b7cac7c43cab6ca87cf6b516074e3a718e0ba5e7f4bb5fb1f776390a45265d4e6a4bd965e24144467c7bc2d750add9fa894 WHIRLPOOL ace41b94b9242757debf6e4cc31d51bf3ee061459259c713856e28d027d3ac5b6d9ae19cd56231d97645a205f25b6e072b9e8a2390763525b2e29c53e00dc9d7
+MISC ChangeLog 10474 SHA256 35b24217b83d840c658cff068ed185907b5e5c05a1a943c9852ff49cc886e45d SHA512 6975068958e4d09c2abbe43edaa6586592359e644977c2932c8c010bdab2c8b494a6b43d6a6d02e7829adf538029e1468db6a2e2f2aecc8e564d2364f5a121c7 WHIRLPOOL 32061116637e0d3ce8a4fc64bfdf0533a2d4e01429a43c9b452e2a4bf6b697ad2d58f83983a701b375eaa641bfd79c3524c53599bfd7ee8c211bed0d4543048c
 MISC metadata.xml 198 SHA256 5caca51bb42a27d79fe99901fc0331653e71cb0a40baa1c387b9d3fc99e007a8 SHA512 ce42b56d5a9225aa9cbf7ddc4f92285df0ceb9eadf9befe0787837f40c6f86dce0b3a9de2b29e14a6c224ce25e6038d7e1bfe5e56ebedd2cb5be87fc9a216d89 WHIRLPOOL 9ce3e5ec80ac4302b609914f7a821fba1bbcead615d535c0d17b9b1e37892c4a9b2cbcbe6a46406e99bb3eb4f5b634277913b34f1f1b3b39d2d51e2c2dcda24e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHNmF4ACgkQxeMuLWsGW/urLgCfZZ2xyZMNy0Ql9wjwgBAOsReZ
-U3AAnRls7MPz5erH3aK3wtRINNTeWSCU
-=Pt88
+iEYEAREIAAYFAlItd5QACgkQxeMuLWsGW/uRGQCcCgvASn5ISeBRg+Y0Vtce0d8s
+p7QAn2jL9tyfT0ZO09zCvSLw9UeUIAS5
+=Dgg7
 -----END PGP SIGNATURE-----
