@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install setup
-DEPEND=>=dev-libs/icu-4.3.1 dev-lang/erlang[ssl] >=dev-libs/openssl-0.9.8j:0 >=net-misc/curl-7.18.2 <dev-lang/spidermonkey-1.8.7
-DESCRIPTION=Apache CouchDB is a distributed, fault-tolerant and schema-free document-oriented database.
-EAPI=2
-HOMEPAGE=http://couchdb.apache.org/
-IUSE=test
-KEYWORDS=amd64 ppc x86
-LICENSE=Apache-2.0
-RDEPEND=>=dev-libs/icu-4.3.1 dev-lang/erlang[ssl] >=dev-libs/openssl-0.9.8j:0 >=net-misc/curl-7.18.2 <dev-lang/spidermonkey-1.8.7
-SLOT=0
-SRC_URI=mirror://apache/couchdb/1.2.1/apache-couchdb-1.2.1.tar.gz
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9383cc89434a6bf2cf46ef9cd3942e19
