@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test
-DEPEND=>=dev-libs/icu-4.3.1 <dev-lang/erlang-16[ssl] >=dev-libs/openssl-0.9.8j:0 >=net-misc/curl-7.18.2 <dev-lang/spidermonkey-1.8.7
-DESCRIPTION=Apache CouchDB is a distributed, fault-tolerant and schema-free document-oriented database.
-EAPI=5
-HOMEPAGE=http://couchdb.apache.org/
-IUSE=test
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=Apache-2.0
-RDEPEND=>=dev-libs/icu-4.3.1 <dev-lang/erlang-16[ssl] >=dev-libs/openssl-0.9.8j:0 >=net-misc/curl-7.18.2 <dev-lang/spidermonkey-1.8.7
-SLOT=0
-SRC_URI=mirror://apache/couchdb/source/1.3.0/apache-couchdb-1.3.0.tar.gz
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=429f53ba50d73226c2a138ffb28ec46c
