@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/couchdb
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/couchdb/ChangeLog,v 1.78 2013/06/28 14:06:16 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/couchdb/ChangeLog,v 1.79 2013/09/09 07:23:52 djc Exp $
+
+  09 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> -couchdb-1.2.1.ebuild,
+  -couchdb-1.3.0.ebuild:
+  Remove old versions.
 
 *couchdb-1.3.1 (28 Jun 2013)
 
